--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="scripts/index.js"></script>
+<script src="index.js"></script>
 <script>
     let socket1 = new Websocket("#root");
 </script>
